# pyising

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  bindings.cpp  example.py  ising.cpp  ising.hpp  parallel_run.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
cnpy/: CMakeLists.txt
examples/: example.py  ising_example.ipynb  parallel_run.py  show_sim.py
src/: bindings.cpp  fft.hpp  ising.cpp  ising.hpp  main.cpp
